After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772813 - Don't try to show the modification status for collections in the properties dialog
Don't try to show the modification status for collections in the properties d...
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
3.22.x
Other All
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-10-12 17:52 UTC by Debarshi Ray
Modified: 2016-10-12 18:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
properties-dialog: Don't show the modification status for collections (6.13 KB, patch)
2016-10-12 17:54 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2016-10-12 17:52:42 UTC
Opening the properties dialog for a collection leads to:
CRITICAL **: photos_base_item_pipeline_is_edited_async: assertion '!priv->collection' failed

This is caused by trying to show the modification status (ie. whether an item has been edited or not), which doesn't make sense for collections.
Comment 1 Debarshi Ray 2016-10-12 17:54:22 UTC
Created attachment 337524 [details] [review]
properties-dialog: Don't show the modification status for collections