properties-dialog: Don't show the modification status for collections

Collections don't have any pixels, actual images do, so it doesn't make
sense to show the modification status for them. Trying to do so would
lead to:
  CRITICAL **: photos_base_item_pipeline_is_edited_async: assertion
    '!priv->collection' failed

https://bugzilla.gnome.org/show_bug.cgi?id=772813